made changes for smooth profile and home nav

--- a/templates/newuser.html
+++ b/templates/newuser.html
@@ -130,7 +130,7 @@
             </select>
 
             <label class="optional">Profile Picture (Optional)</label>
-            <input type="file" name="profile_pic">
+            <input type="file" name="profile_pic" accept="image/*">
 
             <label class="optional">Short Bio</label>
             <textarea name="bio" rows="3" placeholder="Tell us about yourself..."></textarea>
