--- a/templates/water.html
+++ b/templates/water.html
@@ -227,7 +227,7 @@
 
 <header>
     💧 Water Intake
-    <a href="home.html" class="home-btn">🏠 Home</a>
+    <a href="{{ url_for('home') }}" class="home-btn">🏠 Home</a>
 </header>
 
 <p class="intro">
